Update website title in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,7 @@
 ############################
 
 # Name of website
-title: The 12th annual Flare-On challenge Write-up
-
+title: Cr0nica1
 # Your name to show in the footer
 author: Hoàng Tiến Minh (cr0nica1)
 
